--- a/index.html
+++ b/index.html
@@ -251,14 +251,15 @@
             </div>
         </div>
 
-        <!-- <div class="gallery-title">Gallery</div> -->
+        <div class="gallery-title">Gallery</div>
         <div class="gallery">
             <img src="IMG-20240814-WA0001.jpg" alt="Full Body Photo">
-            <img src="DSC_1313.jpg" alt="Full Body Photo">
-            <img src="DSC_1323.jpg" alt="Half Body Photo">
+            <img src="DSC_1313.JPG" alt="Full Body Photo">
+            <img src="DSC_1323.JPG" alt="Half Body Photo">
         </div>
 
     </div>
 
 </body>
+
 </html>
