Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
         <div class="gallery-title">Gallery</div>
         <div class="gallery">
             <img src="IMG-20240814-WA0001.jpg" alt="Full Body Photo">
-            <img src="DSC_1313.JPG" alt="Full Body Photo">
-            <img src="DSC_1323.JPG" alt="Half Body Photo">
+            <img src="DSC_1313.jpg" alt="Full Body Photo">
+            <img src="DSC_1323.jpg" alt="Half Body Photo">
         </div>
 
     </div>
@@ -263,3 +263,4 @@
 </body>
 
 </html>
+
