Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
         <div class="gallery-title">Gallery</div>
         <div class="gallery">
             <img src="IMG-20240814-WA0001.jpg" alt="Full Body Photo">
-            <img src="gallery1.jpg" alt="Full Body Photo">
-            <img src="gallery2.jpg" alt="Half Body Photo">
+            <img src="gallery1.JPG" alt="Full Body Photo">
+            <img src="gallery2.JPG" alt="Half Body Photo">
         </div>
 
     </div>
@@ -263,5 +263,6 @@
 </body>
 
 </html>
+
 
 
