--- a/index.html
+++ b/index.html
@@ -6,34 +6,95 @@
     <title>Biodata - Yogendra Singh Kushwaha</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
-        /* Animated Web-Dev/Gaming Inspired Background */
-        @keyframes gradientBG {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
+        /* Base Body Style */
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 40px;
             display: flex;
             justify-content: center;
-            background: linear-gradient(-45deg, #0f2027, #203a43, #2c5364, #1b2a47);
-            background-size: 400% 400%;
-            animation: gradientBG 15s ease infinite;
+            background-color: #0a0705; /* Deep, elegant dark background */
             color: #333;
+            overflow-x: hidden; /* Prevents scrollbars from the animation */
         }
+
+        /* --- GOLDEN AURA ANIMATION --- */
+        .aura-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            z-index: -1;
+            overflow: hidden;
+            background: radial-gradient(circle at center, #1f1610 0%, #0a0705 100%);
+        }
+
+        .aura {
+            position: absolute;
+            border-radius: 50%;
+            filter: blur(120px); /* Creates the soft glow effect */
+            opacity: 0.6;
+            animation-iteration-count: infinite;
+            animation-timing-function: ease-in-out;
+            animation-direction: alternate;
+        }
+
+        .aura1 {
+            width: 50vw;
+            height: 50vw;
+            background: #d4af37; /* Classic Gold */
+            top: -10%;
+            left: -10%;
+            animation-name: float1;
+            animation-duration: 25s;
+        }
+
+        .aura2 {
+            width: 45vw;
+            height: 45vw;
+            background: #ffdf00; /* Bright Gold */
+            bottom: -20%;
+            right: -10%;
+            animation-name: float2;
+            animation-duration: 32s;
+        }
+
+        .aura3 {
+            width: 40vw;
+            height: 40vw;
+            background: #b8860b; /* Dark Goldenrod */
+            top: 30%;
+            left: 40%;
+            animation-name: float3;
+            animation-duration: 28s;
+        }
+
+        /* Random Movement Keyframes */
+        @keyframes float1 {
+            0% { transform: translate(0, 0) scale(1); }
+            100% { transform: translate(30vw, 20vh) scale(1.2); }
+        }
+        @keyframes float2 {
+            0% { transform: translate(0, 0) scale(1.2); }
+            100% { transform: translate(-30vw, -20vh) scale(1); }
+        }
+        @keyframes float3 {
+            0% { transform: translate(0, 0) scale(0.9); }
+            100% { transform: translate(-25vw, 30vh) scale(1.3); }
+        }
+        /* ------------------------------ */
 
         /* Glassmorphism Card Style */
         .page {
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
+            /* Slightly more transparent to let the gold shine through */
+            background: rgba(255, 255, 255, 0.88); 
+            backdrop-filter: blur(15px);
             width: 850px;
             padding: 50px 60px;
             border-radius: 20px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            box-shadow: 0 25px 50px rgba(0,0,0,0.5);
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            box-shadow: 0 25px 50px rgba(0,0,0,0.6);
             position: relative;
         }
 
@@ -44,7 +105,7 @@
         }
 
         .ganesha-logo {
-            width: 150px;
+            width: 65px;
             margin-bottom: 10px;
         }
 
@@ -58,7 +119,7 @@
         }
 
         .header h2 {
-            color: #d4af37; /* Gold accent */
+            color: #b8860b; 
             font-size: 16px;
             margin: 0 0 25px 0;
             font-weight: 500;
@@ -69,12 +130,16 @@
             width: 170px;
             height: 170px;
             object-fit: cover;
-            /* Focuses on the top center to display the full face perfectly */
             object-position: center 15%; 
             border-radius: 50%;
             border: 4px solid #d4af37;
-            box-shadow: 0 8px 16px rgba(0,0,0,0.15);
+            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
             margin-bottom: 15px;
+            transition: transform 0.3s ease;
+        }
+
+        .profile-pic:hover {
+            transform: scale(1.05);
         }
 
         .name-title {
@@ -86,22 +151,25 @@
 
         .section {
             margin-bottom: 30px;
-            background: rgba(255, 255, 255, 0.5);
+            background: rgba(255, 255, 255, 0.6);
             padding: 20px;
             border-radius: 12px;
-            border-left: 5px solid #203a43;
+            border-left: 5px solid #d4af37; /* Changed accent to gold */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .section:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.05);
         }
 
         .section-title {
-            color: #203a43;
+            color: #1b2a47;
             font-size: 20px;
             border-bottom: 2px dashed #ccc;
             padding-bottom: 8px;
             margin-bottom: 15px;
             font-weight: 600;
-            display: flex;
-            align-items: center;
-            gap: 10px;
         }
 
         .grid {
@@ -124,7 +192,7 @@
 
         .value {
             color: #222;
-            font-weight: 400;
+            font-weight: 500;
         }
 
         .full-width {
@@ -152,16 +220,23 @@
             height: 300px;
             object-fit: cover;
             border-radius: 12px;
-            box-shadow: 0 8px 15px rgba(0,0,0,0.2);
+            box-shadow: 0 8px 15px rgba(0,0,0,0.3);
             border: 3px solid #fff;
+            transition: transform 0.3s ease;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.03);
         }
 
         /* Optimization for PDF Printing */
         @media print {
             body {
                 background: white;
-                animation: none;
                 padding: 0;
+            }
+            .aura-bg {
+                display: none; /* Hides the animation when printing */
             }
             .page {
                 box-shadow: none;
@@ -174,6 +249,7 @@
             .section {
                 background: #f9f9f9;
                 break-inside: avoid;
+                border-left: 5px solid #222;
             }
             .gallery img {
                 box-shadow: none;
@@ -183,6 +259,12 @@
     </style>
 </head>
 <body>
+
+    <div class="aura-bg">
+        <div class="aura aura1"></div>
+        <div class="aura aura2"></div>
+        <div class="aura aura3"></div>
+    </div>
 
     <div class="page">
         <div class="header">
@@ -212,7 +294,7 @@
             <div class="section-title">Religion & Astrological</div>
             <div class="grid">
                 <div class="row"><div class="label">Religion:</div><div class="value">Sanatan Dharma (Hindu)</div></div>
-                <div class="row"><div class="label">Caste:</div><div class="value">Kushwaha</div></div>
+                <div class="row"><div class="label">Caste:</div><div class="value">Kushwaha (Kaachi)</div></div>
                 <div class="row"><div class="label">Gotra:</div><div class="value">Rajwariya</div></div>
                 <div class="row"><div class="label">Mother Tongue:</div><div class="value">Hindi</div></div>
                 <div class="row"><div class="label">Rashi:</div><div class="value">Dhanur (Sagittarius)</div></div>
@@ -224,9 +306,9 @@
         <div class="section">
             <div class="section-title">Education & Profession</div>
             <div class="grid">
-                <div class="row full-width"><div class="label">Highest Education:</div><div class="value">BCA</div></div>
+                <div class="row full-width"><div class="label">Highest Education:</div><div class="value">BCA, MCA (Dropout)</div></div>
                 <div class="row full-width"><div class="label">College:</div><div class="value">Indira Gandhi National Open University</div></div>
-                <div class="row full-width"><div class="label">Occupation:</div><div class="value">Freelancing (Web Development / Gaming / Health, Nutrition & Wellness Coach)</div></div>
+                <div class="row full-width"><div class="label">Occupation:</div><div class="value">Freelance (Web Development / Gaming / Health, Nutrition & Wellness Coach)</div></div>
             </div>
         </div>
 
@@ -236,7 +318,6 @@
                 <div class="row full-width"><div class="label">Father's Name:</div><div class="value">Shri. Mahendra Pal Singh (Defense Person, Retired)</div></div>
                 <div class="row full-width"><div class="label">Mother's Name:</div><div class="value">Smt. Rama Devi (Homemaker)</div></div>
                 <div class="row full-width"><div class="label">Brother:</div><div class="value">Yatender Singh Kushwaha (Elder) - Sr. Design Engineer (ASIC Design and Verification)</div></div>
-                <div class="row full-width"><div class="label">Sister-in-Law:</div><div class="value">Meena Kushwaha (Homemaker)</div></div>
             </div>
         </div>
 
@@ -245,7 +326,7 @@
             <div class="grid">
                 <div class="row full-width"><div class="label">Address:</div><div class="value">S/O Mahendra Pal Singh, 27, Vill:- Raypur, Post:- Khair, District:- Aligarh (202138)</div></div>
                 <div class="row"><div class="label">Contact No:</div><div class="value">+91 7983914058</div></div>
-                <div class="row"><div class="label">Email ID:</div><div class="value">yogi.121@outlook.com</div></div>
+                <div class="row"><div class="label">Email ID:</div><div class="value">Yogi.121@outlook.com</div></div>
                 <div class="row"><div class="label">Father's No:</div><div class="value">+91 7063949192</div></div>
                 <div class="row"><div class="label">Mother's No:</div><div class="value">+91 7599313745</div></div>
             </div>
@@ -261,8 +342,4 @@
     </div>
 
 </body>
-
 </html>
-
-
-
