Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <div class="grid">
                 <div class="row full-width"><div class="label">Father's Name:</div><div class="value">Shri. Mahendra Pal Singh (Defense Person, Retired)</div></div>
                 <div class="row full-width"><div class="label">Mother's Name:</div><div class="value">Smt. Rama Devi (Homemaker)</div></div>
-                <div class="row full-width"><div class="label">Brother:</div><div class="value">Yatender Singh Kushwaha (Elder) - Sr. Design Engineer (ASIC Design and Verification)</div></div>
+                <div class="row full-width"><div class="label">Brother:</div><div class="value">Yatender Singh Kushwaha (Elder)(Married) - Sr. Design Engineer (ASIC Design and Verification)</div></div>
             <div class="row full-width"><div class="label">Sister-in-law:</div><div class="value">Meena Kushwaha (Homemaker)</div></div>
             
             </div>
@@ -348,3 +348,4 @@
 
 </body>
 </html>
+
